service_&_ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${.Release.Name}-app
spec:
  selector:
    app: ${ .Release.Name }-app
  ports:
  - protocol: TCP
    port: 80 
    targetPort: 8080  
  type: LoadBalancer
