service_&_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${ .Release.Name }-app-ingress 
spec:
  rules:
  - host: myapplication.com  
    http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: ${ .Release.Name }-app  
            port: 80  
  ingressClassName: <ingress-class-name>
